tests/expected_invalid_type_reference_contracts.diag.out
<input>:36:37: error: expected a type in function parameter, found 'function'
    public fn bad_function_param(value: helper) -> Int
                                        ^^^^^^
<input>:38:35: error: expected a type in function parameter, found 'module'
    public fn bad_module_param(value: support) -> Int
                                      ^^^^^^^
<input>:40:41: error: record type 'Marker' is not generic but was used with type arguments
    public fn bad_non_generic_record(value: Marker<Int>) -> Int
                                            ^^^^^^^^^^^
<input>:42:40: error: proof type 'Receipt' may not have generic arguments
    public fn bad_non_generic_proof(value: Receipt<Int>) -> Int
                                           ^^^^^^^^^^^^
<input>:44:42: error: permit type 'Access' may not have generic arguments
    public fn bad_permit_type_arg(as access: Access<Int>) -> Int
                                             ^^^^^^^^^^^
<input>:46:49: error: generic record 'support::Pair' expects 2 type argument(s), got 1
    public fn bad_generic_record_wrong_arity(value: support::Pair<Int>) -> Int
                                                    ^^^^^^^^^^^^^^^^^^
<input>:48:46: error: phase type 'Config::Draft<Int>' may not have generic arguments
    public fn bad_phase_position_type_arg(value: Config::Draft<Int>) -> Int
                                                 ^^^^^^^^^^^^^^^^^^
<input>:50:44: error: phase type 'Config' may not have generic arguments
    public fn bad_phase_family_type_arg(value: Config<Int>) -> Int
                                               ^^^^^^^^^^^
<input>:50:44: error: phase family name 'Config' is not a concrete type; use a concrete position such as 'Config::Draft'
    public fn bad_phase_family_type_arg(value: Config<Int>) -> Int
                                               ^^^^^^^^^^^
